Include graal native-image metadata so users can build native images without issues.
Signed-off-by: Paulo Lopes <pmlopes@gmail.com>